fixed footer spacing issues and started styling the CTA form

--- a/docs/src/base/base.css
+++ b/docs/src/base/base.css
@@ -103,3 +103,32 @@ form {
     font-size: var(--fs-900);
   }
 }
+
+.newsletter {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+input {
+  background: none;
+  border: none;
+  width: 100%;
+  border-bottom: 1px solid var(--clr-neutral-300);
+  margin: 0;
+  padding: .5em 0;
+}
+
+label {
+  font-size: 1rem;
+}
+
+input::placeholder {
+  font-size: var(--fs-400);
+}
+
+.cta-btn {
+  margin-top: 2rem;
+  display: inline-block;
+  padding: 0;
+}
