--- a/docs/src/base/footer.css
+++ b/docs/src/base/footer.css
@@ -13,6 +13,10 @@
   color: var(--clr-neutral-900);
 }
 
+.footer-nav {
+  --flow-space: 2rem;
+}
+
 .social {
   display: flex;
 }
@@ -32,6 +36,10 @@
   font-weight: var(--fw-300);
 }
 
+.social-links.split {
+  gap: 1rem;
+}
+
 @media (min-width: 40em) {
   .primary-footer-content {
     display: flex;
@@ -46,6 +54,10 @@
     display: flex;
     gap: 5em;
     margin-left: auto;
+  }
+
+  .footer-nav > .xl-spacer {
+    margin-top: 0;
   }
 
   .copyright {
