--- a/docs/src/components/button.css
+++ b/docs/src/components/button.css
@@ -3,4 +3,10 @@
   text-decoration: none;
   border: none;
   background: none;
+  cursor: pointer;
+}
+
+.btn::after {
+  content: ">";
+  margin-left: 1em;
 }
