--- a/public/src-style.css
+++ b/public/src-style.css
@@ -172,6 +172,11 @@ h2 {
   text-decoration: none;
   border: none;
   background: none;
+  cursor: pointer;
+}
+.btn::after {
+  content: ">";
+  margin-left: 1em;
 }
 .primary-nav {
   position: fixed;
@@ -352,6 +357,30 @@ form {
     font-size: var(--fs-900);
   }
 }
+.newsletter {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+input {
+  background: none;
+  border: none;
+  width: 100%;
+  border-bottom: 1px solid var(--clr-neutral-300);
+  margin: 0;
+  padding: .5em 0;
+}
+label {
+  font-size: 1rem;
+}
+input::placeholder {
+  font-size: var(--fs-400);
+}
+.cta-btn {
+  margin-top: 2rem;
+  display: inline-block;
+  padding: 0;
+}
 .primary-footer-content {
   padding: 3em;
 }
@@ -363,6 +392,9 @@ form {
 .site-map li > a,
 .resources li > a {
   color: var(--clr-neutral-900);
+}
+.footer-nav {
+  --flow-space: 2rem;
 }
 .social {
   display: flex;
@@ -379,6 +411,9 @@ form {
   color: var(--clr-neutral-300);
   font-weight: var(--fw-300);
 }
+.social-links.split {
+  gap: 1rem;
+}
 @media (min-width: 40em) {
   .primary-footer-content {
     display: flex;
@@ -393,6 +428,10 @@ form {
     display: flex;
     gap: 5em;
     margin-left: auto;
+  }
+
+  .footer-nav > .xl-spacer {
+    margin-top: 0;
   }
 
   .copyright {
